tests/baselines/reference/esDecorators-classDeclaration-methods-nonStaticAbstract(target=es2015).errors.txt
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(6,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(7,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(8,5): error TS1249: A decorator can only decorate a method implementation, not an overload.


==== esDecorators-classDeclaration-methods-nonStaticAbstract.ts (3 errors) ====
    declare let dec: any;
    
    const method3 = "method3";
    
    abstract class C {
        @dec(1) abstract method1(): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        @dec(2) abstract ["method2"](): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        @dec(3) abstract [method3](): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
    }
    